PythonCodeParser.py
## alunos: ISA STOHLER BERTOLACCINI e JEFFERSON SOBRINHO ABBIN
# Generated from PythonCode.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonCodeParser ( Parser ):

    grammarFileName = "PythonCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'if'", "'('", "')'", "'{'", "'}'", 
                     "'else'", "'while'", "'def'", "';'", "'return'", "'print'", 
                     "'sleep('", "')\\n'", "','", "'=='", "'!='", "'<'", 
                     "'<='", "'>='", "'>'", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "WritePortStatement", "ReadPortStatement", 
                      "WriteSerialStatement", "ReadSerialStatement", "ReadanalogStatement", 
                      "IDENTIFIER", "BOOL", "INT", "FLOAT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignmentStatement = 2
    RULE_ifStatement = 3
    RULE_whileStatement = 4
    RULE_functionDeclaration = 5
    RULE_expressionStatement = 6
    RULE_returnStatement = 7
    RULE_printStatement = 8
    RULE_sleepStatement = 9
    RULE_expressionList = 10
    RULE_parameterList = 11
    RULE_parameter = 12
    RULE_equality = 13
    RULE_rel = 14
    RULE_expression = 15
    RULE_primaryExpression = 16
    RULE_functionCall = 17
    RULE_variable = 18
    RULE_functionName = 19
    RULE_binaryOperator = 20

    ruleNames =  [ "program", "statement", "assignmentStatement", "ifStatement", 
                   "whileStatement", "functionDeclaration", "expressionStatement", 
                   "returnStatement", "printStatement", "sleepStatement", 
                   "expressionList", "parameterList", "parameter", "equality", 
                   "rel", "expression", "primaryExpression", "functionCall", 
                   "variable", "functionName", "binaryOperator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    WritePortStatement=26
    ReadPortStatement=27
    WriteSerialStatement=28
    ReadSerialStatement=29
    ReadanalogStatement=30
    IDENTIFIER=31
    BOOL=32
    INT=33
    FLOAT=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonCodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonCodeParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = PythonCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.statement()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4227873548) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(PythonCodeParser.AssignmentStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(PythonCodeParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(PythonCodeParser.WhileStatementContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(PythonCodeParser.FunctionDeclarationContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(PythonCodeParser.ExpressionStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(PythonCodeParser.ReturnStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(PythonCodeParser.PrintStatementContext,0)


        def WritePortStatement(self):
            return self.getToken(PythonCodeParser.WritePortStatement, 0)

        def ReadPortStatement(self):
            return self.getToken(PythonCodeParser.ReadPortStatement, 0)

        def WriteSerialStatement(self):
            return self.getToken(PythonCodeParser.WriteSerialStatement, 0)

        def sleepStatement(self):
            return self.getTypedRuleContext(PythonCodeParser.SleepStatementContext,0)


        def ReadSerialStatement(self):
            return self.getToken(PythonCodeParser.ReadSerialStatement, 0)

        def ReadanalogStatement(self):
            return self.getToken(PythonCodeParser.ReadanalogStatement, 0)

        def getRuleIndex(self):
            return PythonCodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = PythonCodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.assignmentStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.whileStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 50
                self.functionDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 51
                self.expressionStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 52
                self.returnStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 53
                self.printStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 54
                self.match(PythonCodeParser.WritePortStatement)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 55
                self.match(PythonCodeParser.ReadPortStatement)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 56
                self.match(PythonCodeParser.WriteSerialStatement)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 57
                self.sleepStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 58
                self.match(PythonCodeParser.ReadSerialStatement)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 59
                self.match(PythonCodeParser.ReadanalogStatement)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(PythonCodeParser.VariableContext,0)


        def expression(self):
            return self.getTypedRuleContext(PythonCodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)




    def assignmentStatement(self):

        localctx = PythonCodeParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.variable()
            self.state = 63
            self.match(PythonCodeParser.T__0)
            self.state = 64
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equality(self):
            return self.getTypedRuleContext(PythonCodeParser.EqualityContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonCodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonCodeParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = PythonCodeParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(PythonCodeParser.T__1)
            self.state = 67
            self.match(PythonCodeParser.T__2)
            self.state = 68
            self.equality(0)
            self.state = 69
            self.match(PythonCodeParser.T__3)
            self.state = 70
            self.match(PythonCodeParser.T__4)
            self.state = 72 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 71
                self.statement()
                self.state = 74 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4227873548) != 0)):
                    break

            self.state = 76
            self.match(PythonCodeParser.T__5)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 77
                self.match(PythonCodeParser.T__6)
                self.state = 78
                self.match(PythonCodeParser.T__4)
                self.state = 80 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 79
                    self.statement()
                    self.state = 82 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4227873548) != 0)):
                        break

                self.state = 84
                self.match(PythonCodeParser.T__5)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equality(self):
            return self.getTypedRuleContext(PythonCodeParser.EqualityContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonCodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonCodeParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = PythonCodeParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_whileStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(PythonCodeParser.T__7)
            self.state = 89
            self.match(PythonCodeParser.T__2)
            self.state = 90
            self.equality(0)
            self.state = 91
            self.match(PythonCodeParser.T__3)
            self.state = 92
            self.match(PythonCodeParser.T__4)
            self.state = 94 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.statement()
                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4227873548) != 0)):
                    break

            self.state = 98
            self.match(PythonCodeParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionName(self):
            return self.getTypedRuleContext(PythonCodeParser.FunctionNameContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(PythonCodeParser.ParameterListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonCodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonCodeParser.StatementContext,i)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_functionDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclaration" ):
                listener.enterFunctionDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclaration" ):
                listener.exitFunctionDeclaration(self)




    def functionDeclaration(self):

        localctx = PythonCodeParser.FunctionDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(PythonCodeParser.T__8)
            self.state = 101
            self.functionName()
            self.state = 102
            self.match(PythonCodeParser.T__2)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 103
                self.parameterList()


            self.state = 106
            self.match(PythonCodeParser.T__3)
            self.state = 107
            self.match(PythonCodeParser.T__4)
            self.state = 109 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 108
                self.statement()
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4227873548) != 0)):
                    break

            self.state = 113
            self.match(PythonCodeParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PythonCodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)




    def expressionStatement(self):

        localctx = PythonCodeParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.expression()
            self.state = 116
            self.match(PythonCodeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PythonCodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):

        localctx = PythonCodeParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(PythonCodeParser.T__10)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3 or _la==31:
                self.state = 119
                self.expression()


            self.state = 122
            self.match(PythonCodeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressionList(self):
            return self.getTypedRuleContext(PythonCodeParser.ExpressionListContext,0)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)




    def printStatement(self):

        localctx = PythonCodeParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(PythonCodeParser.T__11)
            self.state = 125
            self.expressionList()
            self.state = 126
            self.match(PythonCodeParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SleepStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PythonCodeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_sleepStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSleepStatement" ):
                listener.enterSleepStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSleepStatement" ):
                listener.exitSleepStatement(self)




    def sleepStatement(self):

        localctx = PythonCodeParser.SleepStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_sleepStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(PythonCodeParser.T__12)
            self.state = 129
            self.expression()
            self.state = 130
            self.match(PythonCodeParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonCodeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonCodeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_expressionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionList" ):
                listener.enterExpressionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionList" ):
                listener.exitExpressionList(self)




    def expressionList(self):

        localctx = PythonCodeParser.ExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.expression()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 133
                self.match(PythonCodeParser.T__14)
                self.state = 134
                self.expression()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonCodeParser.ParameterContext)
            else:
                return self.getTypedRuleContext(PythonCodeParser.ParameterContext,i)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = PythonCodeParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.parameter()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15:
                self.state = 141
                self.match(PythonCodeParser.T__14)
                self.state = 142
                self.parameter()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(PythonCodeParser.VariableContext,0)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = PythonCodeParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.variable()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rel(self):
            return self.getTypedRuleContext(PythonCodeParser.RelContext,0)


        def BOOL(self):
            return self.getToken(PythonCodeParser.BOOL, 0)

        def equality(self):
            return self.getTypedRuleContext(PythonCodeParser.EqualityContext,0)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_equality

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquality" ):
                listener.enterEquality(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquality" ):
                listener.exitEquality(self)



    def equality(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonCodeParser.EqualityContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_equality, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 31]:
                self.state = 151
                self.rel()
                pass
            elif token in [32]:
                self.state = 152
                self.match(PythonCodeParser.BOOL)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 163
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 161
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = PythonCodeParser.EqualityContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_equality)
                        self.state = 155
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 156
                        self.match(PythonCodeParser.T__15)
                        self.state = 157
                        self.rel()
                        pass

                    elif la_ == 2:
                        localctx = PythonCodeParser.EqualityContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_equality)
                        self.state = 158
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 159
                        self.match(PythonCodeParser.T__16)
                        self.state = 160
                        self.rel()
                        pass

             
                self.state = 165
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonCodeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(PythonCodeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return PythonCodeParser.RULE_rel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRel" ):
                listener.enterRel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRel" ):
                listener.exitRel(self)




    def rel(self):

        localctx = PythonCodeParser.RelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_rel)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.expression()
                self.state = 167
                self.match(PythonCodeParser.T__17)
                self.state = 168
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.expression()
                self.state = 171
                self.match(PythonCodeParser.T__18)
                self.state = 172
                self.expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 174
                self.expression()
                self.state = 175
                self.match(PythonCodeParser.T__19)
                self.state = 176
                self.expression()
                pass
